--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "pure simple",
   "main": "index.js",
   "scripts": {
-    "dev":"vuepress dev docs",
-    "build":"vuepress build docs"
+    "dev":"vuepress dev example",
+    "build":"vuepress build example"
   },
   "keywords": [
     "vue",
